# dhmnr.github.io

./: 404.html  _config.yml  feed.xml  hugo.toml  index.html  robots.txt  sitemap.xml
.github/workflows/: hugo.yaml
_layouts/: post.liquid
_pages/dropdown/: index.html
assets/css/: speedrun.css
assets/jupyter/: blog.ipynb.html
blog/: index.html
blog/2015/: index.html
blog/2020/: index.html
blog/2021/: index.html
blog/2022/: index.html
blog/2023/: index.html
blog/2024/: index.html
content/: about.md
content/posts/: a-higher-level-intelligence.md  an-empty-post.md  complete-math-behind-llms.md  intro-to-ptx-optimization.md  optimizing-attention.md  serving-llms-at-scale-flashattention.md  speedrunning-ncu.md  tenets-of-agi.md
cv/: index.html
layouts/shortcodes/: speedrun-def.html
news/: index.html
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
people/: index.html
projects/: index.html
projects/1_project/: index.html
projects/2_project/: index.html
projects/3_project/: index.html
projects/4_project/: index.html
projects/5_project/: index.html
projects/6_project/: index.html
public/: CNAME  index.html  index.xml  sitemap.xml
public/about/: index.html
public/categories/: index.html  index.xml
public/code/speedrunning-ncu/: .gitignore  CMakeLists.txt  build.sh  profile.bat  profile.sh  vector_add.cu
public/css/: dark.1b13a7b6d28e0b0d9ae67c6fde34154344678e0dfb3455efb0a1257891bad70b.css  (+19 more)
publications/: index.html
repositories/: index.html
teaching/: index.html
(+72 files in other folders)
